update: 色クラスの追加、コンソールにも表示されるよう調整